[gd_scene load_steps=19 format=2]

[ext_resource path="res://player1demo.tscn" type="PackedScene" id=1]
[ext_resource path="res://playercam.gd" type="Script" id=2]
[ext_resource path="res://1chardemo/d38lk4g-32855cb0-fc73-4249-abdf-100d37d9d01c.png" type="Texture" id=3]
[ext_resource path="res://monstdemo.tscn" type="PackedScene" id=4]
[ext_resource path="res://1chardemo/1light.png" type="Texture" id=5]
[ext_resource path="res://1chardemo/2light.png" type="Texture" id=6]
[ext_resource path="res://1chardemo/1flashlight.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.843137, 0.258824, 0.258824, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.643137, 0.858824, 0.270588, 1 )
border_color = Color( 0, 0, 0, 1 )
corner_detail = 10

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 160, 1376 )

[sub_resource type="CapsuleShape2D" id=5]
radius = 120.0
height = 336.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 296, 40 )

[sub_resource type="CapsuleShape2D" id=7]
radius = 104.0
height = 140.0

[sub_resource type="CapsuleShape2D" id=8]
radius = 56.0002
height = 192.0

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 64, 48 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 32, 32 )

[sub_resource type="CapsuleShape2D" id=11]
radius = 96.0

[node name="leveldemo" type="Node"]

[node name="background" type="ColorRect" parent="."]
margin_left = -3643.33
margin_top = -3371.14
margin_right = 3597.67
margin_bottom = 3521.86
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="demomap" type="Sprite" parent="."]
scale = Vector2( 4.50625, 4.29882 )
texture = ExtResource( 3 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.054902, 0.054902, 0.141176, 1 )

[node name="monstdemo" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 196.881, -976.63 )

[node name="monstdemo2" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( -709.295, 536.041 )

[node name="player1demo" parent="." instance=ExtResource( 1 )]

[node name="flashlightcont" type="Node2D" parent="player1demo"]

[node name="flashlightpng" type="Sprite" parent="player1demo/flashlightcont"]
position = Vector2( 100.672, -13.3635 )
rotation = -3.14159
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="flashlightdemo" type="Light2D" parent="player1demo/flashlightcont"]
position = Vector2( 584.984, -4.14661 )
rotation = 1.5708
scale = Vector2( 0.50648, 0.50648 )
texture = ExtResource( 6 )
texture_scale = 3.5
mode = 2

[node name="playercam" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="responsivecam" type="Camera2D" parent="playercam"]
current = true
zoom = Vector2( 3, 3 )

[node name="HealthBar" type="ProgressBar" parent="playercam"]
margin_left = -40.0
margin_top = -112.0
margin_right = 40.0
margin_bottom = -97.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 20.0
step = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaminaBar" type="ProgressBar" parent="playercam"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -40.0
margin_top = -92.0
margin_right = 40.0
margin_bottom = -82.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 2 )
max_value = 50.0
step = 1.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Light2D" type="Light2D" parent="playercam"]
position = Vector2( 0, -2 )
texture = ExtResource( 5 )
texture_scale = 9.25
energy = 0.6
mode = 2

[node name="mapwalls" type="StaticBody2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="wall1" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( -1288, 0 )
shape = SubResource( 4 )

[node name="wall2" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( 1280, 8 )
shape = SubResource( 4 )

[node name="wall3" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( -1096, 752 )
shape = SubResource( 5 )

[node name="wall4" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( -1120, 864 )
rotation = 1.57079
shape = SubResource( 5 )

[node name="wall5" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( -824, 1008 )
rotation = 1.57079
shape = SubResource( 5 )

[node name="wall6" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( -128, 1336 )
shape = SubResource( 6 )

[node name="wall7" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( -8, -1336 )
shape = SubResource( 6 )

[node name="wall8" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( -552, 1144 )
rotation = 1.57079
shape = SubResource( 5 )

[node name="wall9" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( -384, 1312 )
shape = SubResource( 5 )

[node name="wall10" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( 96, 1312 )
shape = SubResource( 5 )

[node name="wall11" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( 336, 1144 )
rotation = 1.57079
shape = SubResource( 5 )

[node name="wall12" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( 824, 1008 )
rotation = 1.57079
shape = SubResource( 5 )

[node name="wall13" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( 1104, 736 )
rotation = 6.28318
shape = SubResource( 5 )

[node name="wall14" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( 952, 416 )
rotation = 6.28318
shape = SubResource( 5 )

[node name="wall15" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( 848, 424 )
rotation = 1.57079
shape = SubResource( 5 )

[node name="wall16" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( 840, 320 )
rotation = 1.57079
shape = SubResource( 5 )

[node name="wall17" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( 544, 496 )
shape = SubResource( 6 )

[node name="wall18" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( 544, 392 )
shape = SubResource( 6 )

[node name="wall19" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( 288, 504 )
rotation = 1.57079
shape = SubResource( 7 )

[node name="wall20" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( 288, 376 )
rotation = 1.57079
shape = SubResource( 7 )

[node name="wall21" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( 360, 320 )
shape = SubResource( 7 )

[node name="wall22" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( 1088, 96 )
shape = SubResource( 7 )

[node name="wall23" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( 944, 232 )
shape = SubResource( 7 )

[node name="wall24" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( -360, -448 )
shape = SubResource( 7 )

[node name="wall25" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( -216, -1280 )
shape = SubResource( 7 )

[node name="wall26" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( 224, -1272 )
shape = SubResource( 7 )

[node name="wall27" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( -344, -992 )
shape = SubResource( 7 )

[node name="wall28" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( -344, -784 )
shape = SubResource( 7 )

[node name="wall29" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( -784, -240 )
rotation = 1.57079
shape = SubResource( 7 )

[node name="wall30" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( -656, -240 )
rotation = 1.57079
shape = SubResource( 7 )

[node name="wall31" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( -512, -384 )
rotation = 1.57079
shape = SubResource( 7 )

[node name="wall32" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( -288, -384 )
rotation = 1.57079
shape = SubResource( 7 )

[node name="wall33" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( -1008, -656 )
rotation = 1.57079
shape = SubResource( 7 )

[node name="wall34" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( -792, -464 )
shape = SubResource( 7 )

[node name="wall35" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( -264, -496 )
rotation = 1.57079
shape = SubResource( 7 )

[node name="wall36" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( -168, -616 )
rotation = 1.57079
shape = SubResource( 8 )

[node name="wall37" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( 360, -1200 )
rotation = 1.57079
shape = SubResource( 7 )

[node name="wall38" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( 576, -1200 )
rotation = 1.57079
shape = SubResource( 7 )

[node name="wall39" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( 856, -1080 )
rotation = 1.57079
shape = SubResource( 7 )

[node name="wall40" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( 1008, -928 )
rotation = 1.57079
shape = SubResource( 7 )

[node name="wall41" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( 1152, -792 )
rotation = 1.57079
shape = SubResource( 7 )

[node name="wall42" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( -144, 760 )
shape = SubResource( 9 )

[node name="wall43" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( -616, 312 )
shape = SubResource( 10 )

[node name="wall44" type="CollisionShape2D" parent="mapwalls"]
position = Vector2( 0, -312 )
shape = SubResource( 11 )

[connection signal="health_change" from="player1demo" to="playercam" method="_on_player1demo_health_change"]
[connection signal="stamina_change" from="player1demo" to="playercam" method="_on_player1demo_stamina_change"]
